--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - PASSWORD=${WEB_PASSWORD}
       - SUDO_PASSWORD=${ROOT_PASSWORD}
       - DEFAULT_WORKSPACE=${WORKSPACE_FOLDER}
-      - PWA_APPNAME=${PWA_APPNAME:-code-server}
+      - PWA_APPNAME=${PWA_APPNAME:-code_server}
     volumes:
       - config:/config
     ports:
